// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectInput component should call console.warn when given neither option nor children 1`] = `
<div
  className="input1"
>
  <label
    htmlFor="testSelect"
  >
    Select Something
    <form
      id="LocationFilters"
    >
      <select
        className="default-select"
        defaultValue="1"
        id="testSelect"
        name="testSelect"
        onChange={[Function]}
        required={false}
        selected={-1}
      >
        You need to provide atleast children or options to the select element
      </select>
    </form>
  </label>
</div>
`;

exports[`SelectInput component should display value if displayText isn't given in options 1`] = `
<div
  className="input1"
>
  <label
    htmlFor="testSelect"
  >
    Select Something
    <form
      id="LocationFilters"
    >
      <select
        className="default-select"
        defaultValue="1"
        id="testSelect"
        name="testSelect"
        onChange={[Function]}
        required={false}
        selected={-1}
      >
        <option
          key="4"
          value={4}
        >
          <Component />
        </option>
        <option
          key="5"
          value={5}
        >
          <Component />
        </option>
      </select>
    </form>
  </label>
</div>
`;

exports[`SelectInput component should render placeholder when provided 1`] = `
<div
  className="input1"
>
  <label
    htmlFor="testSelect"
  >
    Select Something
    <form
      id="LocationFilters"
    >
      <select
        className="default-select"
        defaultValue="1"
        id="testSelect"
        name="testSelect"
        onChange={[Function]}
        required={false}
        selected={-1}
      >
        <option
          value=""
        >
          Hello
           
        </option>
        You need to provide atleast children or options to the select element
      </select>
    </form>
  </label>
</div>
`;

exports[`SelectInput component should render properly when given children 1`] = `
<div
  className="input1"
>
  <label
    htmlFor="testSelect"
  >
    Select Something
    <form
      id="LocationFilters"
    >
      <select
        className="default-select"
        defaultValue="1"
        id="testSelect"
        name="testSelect"
        onChange={[Function]}
        required={false}
        selected={-1}
      >
        <option
          key="1"
          value={1}
        >
          1
        </option>
        <option
          key="2"
          value={2}
        >
          2
        </option>
      </select>
    </form>
  </label>
</div>
`;

exports[`SelectInput component should render properly when given options prop 1`] = `
<div
  className="input1"
>
  <label
    htmlFor="testSelect"
  >
    Select Something
    <form
      id="LocationFilters"
    >
      <select
        className="default-select"
        defaultValue="1"
        id="testSelect"
        name="testSelect"
        onChange={[Function]}
        required={false}
        selected={-1}
      >
        <option>
          hello
        </option>
        <option>
          how are you
        </option>
      </select>
    </form>
  </label>
</div>
`;

exports[`SelectInput component should use 'calendarId' incase 'id' is not given in option 1`] = `
<div
  className="input1"
>
  <label
    htmlFor="testSelect"
  >
    Select Something
    <form
      id="LocationFilters"
    >
      <select
        className="default-select"
        defaultValue="Nairobi"
        id="testSelect"
        name="testSelect"
        onChange={[Function]}
        required={false}
        selected={-1}
      >
        <option
          key="Nairobi"
        >
          Nairobi
        </option>
        <option
          key="Kampala"
        >
          Kampala
        </option>
      </select>
    </form>
  </label>
</div>
`;
